tests/baselines/reference/interfaceDeclaration2.errors.txt
tests/cases/compiler/interfaceDeclaration2.ts(4,11): error TS2518: Only an ambient class can be merged with an interface.
tests/cases/compiler/interfaceDeclaration2.ts(5,7): error TS2518: Only an ambient class can be merged with an interface.


==== tests/cases/compiler/interfaceDeclaration2.ts (2 errors) ====
    interface I1 { }
    module I1 { }
    
    interface I2 { }
              ~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    class I2 { }
          ~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    
    interface I3 { }
    function I3() { }
    
    interface I4 { }
    var I4:number;
    
    